fix tile drag event

--- a/public/css/toolbox.css
+++ b/public/css/toolbox.css
@@ -1160,16 +1160,16 @@ img.content-page-block {
 }
 
 .drop-zone-highlight {
-  outline: 2px dashed #5068a8;
-  background: #fa8585;
+  background: #efeeec;
   border: 1px dashed #222f54;
   border-radius: 6px;
   margin: 4px 0px;
-  transition: background 0.2s, outline 0.2s;
+  transition: background 0.2s, border 0.2s;
 }
 
 .drop-zone-highlight .add-new-info-section {
   display: none;
+  height: 1.6rem;
 }
 
 .tb-add-new-info-section{
@@ -1334,7 +1334,7 @@ img.content-page-block {
 
 .container-column-info .info-desc-content:hover,
 .container-column-info .info-image-section:hover {
-  cursor: default;
+  cursor: move;
 }
 
 [data-gjs-type="info-cta-section"].gjs-selected .tile-open-menu {
