--- a/public/css/toolbox.css
+++ b/public/css/toolbox.css
@@ -707,7 +707,7 @@ img.content-page-block {
 
 .img-button-section img {
   border-radius: 8px;
-  max-width: 70px;
+  width: 70px;
   height: 65px;
   object-fit: cover;
 }
