--- a/public/css/toolbox.css
+++ b/public/css/toolbox.css
@@ -1336,7 +1336,7 @@ img.content-page-block {
 
 .container-column-info .info-desc-content:hover,
 .container-column-info .info-image-section:hover {
-  cursor: default;
+  cursor: move;
 }
 
 [data-gjs-type="info-cta-section"].gjs-selected .tile-open-menu {
@@ -1404,6 +1404,8 @@ img.content-page-block {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  pointer-events: auto;
+  z-index: 1; /* Ensure buttons are above the images */
 }
 
 /* Position the "next button" to the right */
@@ -1465,4 +1467,10 @@ img.content-page-block {
 }
 .select-media-checkbox{
   position: absolute;
+}
+
+/* Make images ignore pointer events to enable dragging */
+.info-image-section img,
+.product-service-image {
+  pointer-events: none;
 }
